Refactor: 메서드 이름 통일